Updating stylings with input[type=date]

--- a/src/components/UpsertProduct/UpsertProduct.css
+++ b/src/components/UpsertProduct/UpsertProduct.css
@@ -1,4 +1,4 @@
-input[type=text], input[type=number], textarea {
+input[type=text], input[type=number], input[type=date], textarea {
     width: 99%;
     padding: 12px 20px;
     margin: 1vh; 
